@@ -24,6 +24,11 @@
       <essential/>
       <frozen/>
     </group>
+    <group name="proposed">
+      <description>Proposed GNOME desktop and developer platform software.</description>
+      <essential/>
+      <frozen/>
+    </group>
   </release>
   <release name="HEAD">
     <group name="fifth-toe">
@@ -357,8 +362,8 @@
     </version>
   </module>
   <module name="eggcups">
-    <version release="HEAD">
-      <component name="eggcups" dir="eggcups" group="extras">
+    <version release="gnome-2.12">
+      <component name="eggcups" dir="eggcups" group="proposed">
         <podir dir="po"/>
         <potname name="eggcups.pot"/>
         <branch name="HEAD"/>
@@ -1215,8 +1220,8 @@
     </version>
   </module>
   <module name="gnome-keyring-manager">
-    <version release="HEAD">
-      <component name="gnome-keyring-manager" dir="gnome-keyring-manager" group="extras">
+    <version release="gnome-2.12">
+      <component name="gnome-keyring-manager" dir="gnome-keyring-manager" group="proposed">
         <podir dir="po"/>
         <potname name="gnome-keyring-manager.pot"/>
         <branch name="HEAD"/>
@@ -2139,8 +2144,8 @@
     </version>
   </module>
   <module name="libgnomecups">
-    <version release="HEAD">
-      <component name="libgnomecups" dir="libgnomecups" group="extras">
+    <version release="gnome-2.12">
+      <component name="libgnomecups" dir="libgnomecups" group="proposed">
         <podir dir="po"/>
         <potname name="libgnomecups.pot"/>
         <branch name="HEAD"/>
