@@ -1,3 +1,9 @@
+2005-07-10  Christian Rose  <menthos@menthos.com>
+
+	* translation-status.xml: Added proposed group with the proposed
+	modules from
+	http://live.gnome.org/ReleasePlanning/TwoPointEleven/Desktop.
+
 2005-07-06  Danilo Šegan  <danilo@gnome.org>
 
 	* translation-status.xml: gnome-terminal has branched for 2.10.
